[package]
name = "hashsummer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
digest = "0.10.5"
generic-array = "0.14.6"
rustfft = "6.0.1"
crossbeam = "0.8.2"
sha2 = "0.10.6"
compress = "0.2.1"
flate2 = "1.0.25"
parking_lot = "0.12.1"
itertools = "0.10.5"
cfg-if = "1.0.0"
blake3 = "1.3.3"
#sha2-const = "0.1.2"
#deflect = "0.1.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"