[package]
name = "hashsummer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
digest = "0.10.5"
generic-array = "0.14.6"
rustfft = "6.0.1"
crossbeam = "0.8.2"
num = "0.4.1"
num-traits = "0.2.17"
num-derive = "0.4.1"
futures = { version = "0.3", features = ["thread-pool"]}
reed-solomon = "0.2.1" # error correction and detection
sha2 = "0.10.6"
compress = "0.2.1"
flate2 = "1.0.25"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"]}
compact_str = "0.7.1"
itertools = "0.10.5"
cfg-if = "1.0.0"
blake3 = "1.3.3"
suffix_array = "0.5.0"
#sha2-const = "0.1.2"
#deflect = "0.1.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"